# instant-flash-backend

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_admin_agreements.py  0003_system_config.py  0004_dictionary_parent_id.py  0005_deduplicate_dictionaries.py  0006_dictionary_unique_indexes.py  0007_admin_misc_management.py  0008_admin_menus.py  0009_fix_menu_permissions.py  0010_menu_announce_perm.py  0011_menu_management.py  0012_admin_roles.py  0013_admin_permissions_logout.py  0014_admin_security_logs.py  0015_admin_packages.py  0016_user_profile_bio.py  0017_rate_limit_access_rules.py  0018_user_mobile_client_type.py  0019_post_location_feed_search.py  0020_admin_like_share_routes.py  0021_user_new_phone.py  0022_admin_user_online_route.py  0023_post_visibility.py  0024_post_topics.py  0025_feedback_management.py  0026_user_points.py  0027_user_custom_configs.py  0028_mall_system.py  0029_mall_order_enhancements.py  0030_mall_express.py  0031_mall_order_share.py  0032_user_wallets.py  0033_mall_order_comments.py  0034_mall_append_comments.py  0035_mall_product_interactions.py  0036_mall_interactions_tables.py  0037_global_chat_system.py  0038_wallet_pay_method.py  0039_chat_system_enhance.py  (+13 more)
app/: main.py
app/api/: address.py  (+32 more)
tests/: test_account_deactivation.py  test_ai_model.py  test_aigc_social.py  test_api_flow.py  test_footprints.py  test_global_stats_visibility.py  test_mall_product_clone.py  test_mentions_and_links.py  test_movie_ticketing.py
(+53 files in other folders)
