[project]
name = "instant-flash-backend"
version = "0.1.0"
description = "FastAPI backend for Instant Flash content APIs"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "fastapi>=0.111.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.1.18",
    "pydantic-settings>=2.2.1",
    "python-jose[cryptography]>=3.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
